:hammer: Fix `.lyt-header.is-collapsed` not working

--- a/src/objects/_layout.scss
+++ b/src/objects/_layout.scss
@@ -23,7 +23,7 @@
     @include transition($header-transition);
 
     &.is-collapse {
-      height: $header-height-collapsed;
+      min-height: $header-height-collapsed;
     }
   }
 
